[initdefaultdata] init DefaultDataConfig refactor